api gateway - day1
